test post todos route

--- a/views/todos.pug
+++ b/views/todos.pug
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title #{title}
+  include partials/head
   body
-    h1 #{title}
-    hr
+    include partials/header
+    include partials/navigation
+    p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores porro facilis perferendis amet consequuntur, voluptates, autem sapiente natus aperiam odit impedit nulla aspernatur possimus at itaque quibusdam exercitationem? Earum.
+    p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores porro facilis perferendis amet consequuntur, voluptates, autem sapiente natus aperiam odit impedit nulla aspernatur possimus at itaque quibusdam exercitationem? Earum.
+    p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores porro facilis perferendis amet consequuntur, voluptates, autem sapiente natus aperiam odit impedit nulla aspernatur possimus at itaque quibusdam exercitationem? Earum.
+    p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores porro facilis perferendis amet consequuntur, voluptates, autem sapiente natus aperiam odit impedit nulla aspernatur possimus at itaque quibusdam exercitationem? Earum.
