--- a/views/home.pug
+++ b/views/home.pug
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title #{title}
+  include partials/head
   body
-    h1 #{title}
-    hr
+    include partials/header
+    include partials/navigation
     p #{name}
-    .headers
+    div.headers
       each header in headers
         div.header
-          strong= header.key
-          | :
-          |
+          strong= header.key + ": "
           span= header.value
