add couple of routes

--- a/views/home.pug
+++ b/views/home.pug
@@ -5,8 +5,13 @@ html(lang="en")
     include partials/header
     include partials/navigation
     p #{name}
-    div.headers
+    ul
       each header in headers
-        div.header
+        li
           strong= header.key + ": "
           span= header.value
+    p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores porro facilis perferendis amet consequuntur, voluptates, autem sapiente natus aperiam odit impedit nulla aspernatur possimus at itaque quibusdam exercitationem? Earum.
+    p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores porro facilis perferendis amet consequuntur, voluptates, autem sapiente natus aperiam odit impedit nulla aspernatur possimus at itaque quibusdam exercitationem? Earum.
+    p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores porro facilis perferendis amet consequuntur, voluptates, autem sapiente natus aperiam odit impedit nulla aspernatur possimus at itaque quibusdam exercitationem? Earum.
+    p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores porro facilis perferendis amet consequuntur, voluptates, autem sapiente natus aperiam odit impedit nulla aspernatur possimus at itaque quibusdam exercitationem? Earum.
+
